Minor refactor indirect to changeset based on sonarqube outputs